更新应用名称为“YesCode状态栏小工具”，添加描述和作者信息，优化未使用参数的标记，移除冗余代码，增强窗口管理功能，添加移动窗口和获取窗口位置的API，改善整体代码结构。

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -3,7 +3,8 @@
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
   "appId": "YourAppID",
   "asar": true,
-  "productName": "YourAppName",
+  "productName": "YesCode状态栏小工具",
+  "icon": "build/icon.ico",
   "directories": {
     "output": "release/${version}"
   },
